<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/billabong"
        android:text="@string/login_title"
        android:textColor="#FFFFFF"
        android:textSize="70sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gillsans"
            android:text="@string/username_text"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/login_username_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#FFF"
            android:ems="10"
            android:fontFamily="@font/gillsans"
            android:inputType="text"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gillsans"
            android:text="@string/password_text"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/login_password_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#FFF"
            android:ems="10"
            android:fontFamily="@font/gillsans"
            android:inputType="textPassword"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_button"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:background="@drawable/white_rounded_button"
            android:fontFamily="@font/gillsansb"
            android:text="@string/login_button"
            android:textColor="#2196F3"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gillsans"
                android:text="@string/no_account_text"
                android:textColor="#FFF"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/signup_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gillsansb"
                android:text="@string/sign_up_text"
                android:textColor="#FFF"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>