<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/gillsansb"
        android:text="@string/signup_title"
        android:textColor="#FFF"
        android:textSize="40dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gillsans"
            android:text="@string/username_text"
            android:textColor="#FFF"
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signup_username_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFF"
            android:ems="10"
            android:fontFamily="@font/gillsans"
            android:inputType="text"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gillsans"
            android:text="@string/password_text"
            android:textColor="#FFF"
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signup_password_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFF"
            android:ems="10"
            android:fontFamily="@font/gillsans"
            android:inputType="textPassword"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gillsans"
            android:text="@string/fullname_text"
            android:textColor="#FFF"
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signup_fullname_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFF"
            android:ems="10"
            android:fontFamily="@font/gillsans"
            android:inputType="text"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gillsans"
            android:text="@string/birthday_text"
            android:textColor="#FFF"
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signup_birthday_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFF"
            android:ems="10"
            android:fontFamily="@font/gillsans"
            android:inputType="date"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gillsans"
            android:text="@string/email_text"
            android:textColor="#FFF"
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signup_email_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFF"
            android:ems="10"
            android:fontFamily="@font/gillsans"
            android:inputType="textEmailAddress"
            android:textSize="15dp" />
    </LinearLayout>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/white_rounded_button"
        android:fontFamily="@font/gillsansb"
        android:text="@string/signup_button"
        android:textColor="#2196F3"
        android:textSize="15sp" />

</LinearLayout>