<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/post_profile_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/post_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/username_text"
            android:textColor="#000"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/post_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/contents_text"
        android:textColor="#000" />

    <TextView
        android:id="@+id/post_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif"
        android:text="@string/Tags_text"
        android:textColor="@android:color/holo_blue_dark" />

    <ImageView
        android:id="@+id/post_content_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true" />
</LinearLayout>