<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/add_post_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/toolbar_background"
            android:elevation="4dp"
            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/add_post_content_image"
                android:layout_width="140dp"
                android:layout_height="140dp"
                app:srcCompat="@drawable/ic_launcher_foreground"
                android:scaleType="fitCenter"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gillsans"
                    android:text="@string/contents_text"
                    android:textColor="#000"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/add_post_content_input"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/gillsans"
            android:text="@string/Tags_text"
            android:textColor="#000"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/add_post_tags_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <CheckBox
            android:id="@+id/add_post_is_public_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/gillsans"
            android:text="@string/public_check_box"
            android:textSize="20dp" />

        <Button
            android:id="@+id/add_post_create_post_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@drawable/blue_rounded_button"
            android:text="@string/create_post_button"
            android:textColor="#FFF" />
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/add_post_navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>